# hunalign

./: .gitignore  README.md  readme.html
data/: english.aff  english.dic  hungarian.aff  hungarian.dic
examples/: demo.en.stem  demo.hu.stem  demo.manual.ladder  en.raw  hu.raw
regtest/: regtest.sh
regtest/handaligns/1984.hu/: README  en.pre  (+2 more)
regtest/handaligns/1984.hu.handstem/: README  en.pre  en.sen  hand.ladder  hu.pre
regtest/targets/: 1984.hu.cerr  1984.hu.handstem.realign.cerr  1984.ro.realign.cerr  1984.ro.utf8.realign.cerr  dtm.realign.cerr  steinbeck.huntoken.nopara.cerr
scripts/: en.sen.one.sh  hu.sen.one.sh  hunalignDriver.py  ladder2text.py  partialAlign.py  process.sh  release.howto.txt  subprocessTest.py  teed.py  testProcess-RealHunalign.sh  testProcess.sh  testProcess1.sh  testProcessWithInput.sh  tok.one.sh  visualizeAlignQuality.awk  visualizeLadder.noshrink.awk
scripts/DCEP/: README  README.md  batchfilebylangpair.2ndcpu.sh  batchfilebylangpair.sh  dictforlanguagepair.sh  dictsforalllanguagepairs.sh  do-one-doc.py  extract-bisentences.sh  filteralign.sh  finalpackage.sh  finalpackageforlangpairs.sh  flatladdertolangpair.sh  flatladdertolangpairs.sh  ladder2text.py  languagepair.py  mergedicts.sh  normalizedict.sh  normalizesztakidict.sh  packaligninfobylangpair.sh  readme.sh  realignall.2ndcpu.sh  realignall.sh  renamesztakidicts.sh  reorg.py  tokenizeAll.sh  verifylangpair.sh
src/: CMakeLists.txt
src/hunalign/: Makefile  alignerTool.cpp  bookToMatrix.cpp  bookToMatrix.h  help.h  oldAlignTest.cpp  similarityEvaluator.cpp  translate.cpp
(+36 files in other folders)
